# algorithm

./: #define sort random_shuffle.cpp  .clang-format  .clang-tidy  .clangd  .gitignore  1  1.cpp  1.cs  1.html  1.ilk  1.in  1.js  1.md  1.out  1.py  1.ts  2-SAT算法.cpp  2.cpp  2.py  A+B.cpp  BFS遍历二叉树.cpp  BFS遍历二叉树（动态版）.cpp  Bellman-Ford算法.cpp  CMakeLists.txt  CMakePresets.json  Cargo.toml  DFS.cpp  DFS遍历二叉树.cpp  Dijkstra堆优化版.cpp  Dijkstra最短路.cpp  Floyd优化版.cpp  Floyd算法.cpp  KMP.cpp  Kruskal.cpp  Makefile  Nice Grid.cpp  Nim游戏.cpp  README.md  SPFA最短路.cpp  ST表.cpp  (+149 more)
CSG/: 1152：高桥和低桥.cpp  1213.cpp
HDU/: 1166 敌兵布阵.cpp  1195 Open the Lock.cpp  1213 How Many Tables.cpp  1847 Good Luck in CET-4 Everybody!.cpp  2102 A计划.cpp  2586 How far away ？.cpp  2612 Find a way.cpp  3449 Consumer.cpp  4027 Can you answer these queries.cpp  How Many Tables.cpp
POJ/: 1182 食物链.cpp  1270 Following Orders.cpp  1321 棋盘问题.cpp  1426 Find The Multiple.cpp  1679 The Unique MST.cpp  1780 code.cpp  2227 The Wedding Juicer.cpp  2251 Dungeon Master.cpp  2524 Ubiquitous Religions.cpp  2676 Sudoku.cpp  3070 斐波那契矩阵加速.cpp  3250 Bad Hair Day.cpp  3278 Catch That Cow.cpp  3984 迷宫问题.cpp
UVA/: 10054 The Necklace.cpp  11624 fire!.cpp  572 Oil Deposits.cpp
acwing/: 1114. 棋盘问题.cpp  1230. K倍区间 .cpp  2060. 奶牛选美.cpp  240. 食物链.cpp  2816. 判断子序列.cpp  2875. 超级胶水 .cpp  3321. ATM队列.cpp  3326. 最大硬币数.cpp  3384. 二叉树遍历(指针).cpp  3384. 二叉树遍历(搜索).cpp  3384.二叉树遍历(搜索).cpp  3431. skew数.cpp  3508. 最长公共子串.cpp  3748. 递增子串.cpp  3752. 更小的字符串.cpp  4114. 垃圾桶.cpp  4122. 字符串转换.cpp  4261. 孤独的照片.cpp  4382. 快速打字.cpp  4405. 统计子矩阵.cpp  (+16 more)
(+492 files in other folders)
